<resources>
    <string name="app_name">استمارات الباحث الاجتماعي</string>
    <string name="forget_password">نسيت كلمة المرور</string>
    <string name="employee_number">الرقم الوظيفي</string>
    <string name="password">كلمة المرور</string>
    <string name="sign_in">تسجيل الدخول</string>
    <string name="send">ارسال</string>
    <string name="back">رجوع</string>
    <string name="please_enter_employee_id">الرجاء ادخال الرقم الوظيفي</string>
    <string name="please_enter_password">الرجاء ادخال كلمة المرور</string>
    <string name="no_internet_connection">لا يوجد اتصال بالانترنت!</string>
    <string name="password_is_6_characters_long">كلمة السر قصيرة جدا</string>
    <string name="logging_in">جاري تسجيل الدخول</string>
    <string name="please_wait">الرجاء الانتظار</string>
    <string name="failed_to_connect_to_server">لا يمكن الاتصال على الخادم</string>
    <string name="request_is_being_sent">جاري ارسال الطلب</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="profile">الملف الشخصي</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="name">اسم المستخدم</string>
    <string name="email">ايميل المستخدم</string>
    <string name="phone">رقم الهاتف</string>
    <string name="disasters">الكوارث الطبيعية</string>
    <string name="mazyoona">المزيونة</string>
    <string name="general">عامة</string>
    <string name="help">الاغاثية</string>
    <string name="next">التالي</string>
    <string name="beneficiary_name">اسم المستفيد</string>
    <string name="beneficiary_dob">سنة الميلاد</string>
    <string name="nationality">الجنسية</string>
    <string name="accommodation_data">بيانات المسكن</string>
    <string name="beneficiary_data">بيانات المستفيد</string>
    <string name="bank_data">البيانات البكية</string>
    <string name="income_data">بيانات الدخل</string>
    <string name="wives_children_data">بيانات الزوجات والابناء</string>
    <string name="finish_beneficiary_registration">انهاء التسجيل</string>
    <string name="load_data">جاري جلب البيانات</string>
    <string name="cannot_load_social_statuses">لا يمكن تحميل الحالات الاجتماعية</string>
    <string name="file_number">رقم الملف</string>
    <string name="enter_file_number">الرجاء ادخال رقم الملف</string>
    <string name="data_is_being_fetched">جاري جلب البيانات</string>
    <string name="request_being_processed">جاري العمل على الطلب</string>
    <string name="no_data">لا توجد بيانات</string>
    <string name="update">تحديث</string>
    <string name="enter">ادخال</string>
    <string name="add_new_beneficiary">اضافة مستفيد</string>
    <string name="update_beneficiary">تحديث مستفيد</string>

    <string-array name="regions">
        <item>المزيونة</item>
        <item>هرويب</item>
        <item>اندات</item>
        <item>مثلث</item>
        <item>ميتن</item>
    </string-array>

    <string-array name="income_type">
        <item>الابل والمواشي</item>
        <item>عمل يومي</item>
        <item>اخرى</item>
    </string-array>
</resources>
