<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_employee_number"
        app:layout_constraintEnd_toEndOf="@+id/iv_logo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/iv_logo"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <EditText
        android:id="@+id/et_employee_number"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/employee_number"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#000"
        app:layout_constraintBottom_toTopOf="@+id/et_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_logo" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#000"
        app:layout_constraintBottom_toTopOf="@+id/btn_back"
        app:layout_constraintEnd_toEndOf="@+id/et_employee_number"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/et_employee_number"
        app:layout_constraintTop_toBottomOf="@+id/et_employee_number" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button"
        android:text="@string/sign_in"
        android:textColor="#fff"
        android:textStyle="bold"
        android:onClick="signIn"
        app:layout_constraintBottom_toTopOf="@+id/tv_forget_password"
        app:layout_constraintEnd_toEndOf="@+id/et_phone"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/et_phone"
        app:layout_constraintTop_toBottomOf="@+id/et_phone" />

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forget_password"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:onClick="goToForgetPasswordScreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back" />
</android.support.constraint.ConstraintLayout>