<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".Mazyoona.BeneficiaryAddActivity"
    tools:layout_editor_absoluteY="25dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/white" />

    <com.shuhart.stepview.StepView
        android:id="@+id/step_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:sv_animationType="Line"
        app:sv_doneCircleColor="@color/colorYellow"
        app:sv_doneCircleRadius="12dp"
        app:sv_doneStepLineColor="@color/colorYellow"
        app:sv_doneStepMarkColor="@color/colorWhite"
        app:sv_nextStepLineColor="@color/colorPrimary"
        app:sv_nextTextColor="@color/colorPrimary"
        app:sv_selectedCircleColor="@color/colorPrimary"
        app:sv_selectedCircleRadius="12dp"
        app:sv_selectedStepNumberColor="@color/colorWhite"
        app:sv_selectedTextColor="@color/colorPrimary"
        app:sv_stepLineWidth="1dp"
        app:sv_stepNumberTextSize="12sp"
        app:sv_stepPadding="4dp"
        app:sv_stepViewStyle="@style/StepView"
        app:sv_stepsNumber="5" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <ImageView
                    android:id="@+id/iv_search"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="searchForFileNumber"
                    android:src="@drawable/ic_search" />

                <EditText
                    android:id="@+id/et_file_id"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="4"
                    android:background="@drawable/edit_text"
                    android:hint="@string/file_number"
                    android:inputType="number"
                    android:textAlignment="center" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_beneficiary_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text"
                android:hint="@string/beneficiary_name"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/et_beneficiary_dob"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text"
                android:hint="@string/beneficiary_dob"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/et_beneficiary_nationality"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text"
                android:hint="@string/nationality"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/et_beneficiary_phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text"
                android:hint="@string/phone"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/sp_regions"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_outline"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/sp_social_status"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_text_outline"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:onClick="goToNextPage"
                    android:text="@string/update"
                    android:textColor="#FFF"
                    android:textStyle="bold"
                    android:layout_weight="1"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_enter"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/button"
                    android:onClick="createBeneficiary"
                    android:text="@string/enter"
                    android:textColor="#FFF"
                    android:textStyle="bold"
                    android:layout_weight="1"/>

            </LinearLayout>
            <Button
                android:id="@+id/btn_next"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/next"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>