<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawer"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true"
tools:openDrawer="start"
tools:context=".HomeActivity">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:weightSum="3">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:elevation="2dp"
                android:onClick="goToMazyoonaForm"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:background="@color/colorGreen"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:weightSum="3">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_location"
                        android:layout_weight="2"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/mazyoona"
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:layout_weight="1"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <View
                android:layout_width="80dp"
                android:layout_height="0dp" />

            <android.support.v7.widget.CardView
                android:id="@+id/cv_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:elevation="2dp"
                android:onClick="goToDisastersForm"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:background="@color/colorYellow"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:weightSum="3">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_flash_on"
                        android:layout_weight="2"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/disasters"
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:layout_weight="1"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            android:weightSum="3">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:elevation="2dp"
                android:onClick="goToPublicForm"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:background="@color/colorBlue"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:weightSum="3">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_public"
                        android:layout_weight="2"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/general"
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:layout_weight="1"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <View
                android:layout_width="80dp"
                android:layout_height="0dp" />

            <android.support.v7.widget.CardView
                android:id="@+id/cv_04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:elevation="2dp"
                android:onClick="goToRescueForm"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:background="@color/colorRed"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:weightSum="3">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_spa"
                        android:layout_weight="2"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/help"
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:layout_weight="1"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>

<android.support.design.widget.NavigationView
    android:id="@+id/nav"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:fitsSystemWindows="true"
    app:headerLayout="@layout/nav_header_main"
    app:menu="@menu/drawer_menu" />

</android.support.v4.widget.DrawerLayout>